--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container intro">
 
         <div class="by-line">
-          <span class="by">Por</span> <a href="https://twitter.com/yasgarcia" target="blank">Yas Garcia</a>, <a href="https://twitter.com/alidepsky" target="blank">Alison Depsky</a>, <a href="https://twitter.com/fnbellomo" target="blank">Franco Bellomo</a> <span class="by">y</span> <a href="https://twitter.com/roque_db_" target="blank">Roque De Benedictus</a>
+          <span class="by">Por</span> <a href="https://twitter.com/alidepsky" target="blank">Alison Depsky</a> y <a href="https://twitter.com/fnbellomo" target="blank">Franco Bellomo</a> 
         </div>
         <div class="fecha">1 de Augusto, 2018</div><br>
 
