--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 
     <link rel="stylesheet" href="css/medio-main.css">
-    <link rel="stylesheet" href="../../animate.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/senadores_leyes.css" />
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
