--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
        <section class="section2">
       <h2 class="h2-title green">¿Quiénes Somos?</h2>
       <p class="has-text-centered quiensomos">
-Un equipo de periodistas, diseñadores, desarrolladores y científicos de datos.      <div class="buttons is-centered">
+Somos un equipo de periodistas, diseñadores, desarrolladores y científicos de datos.      <div class="buttons is-centered">
  <a class="button is-large is-centered" href="">Leer Más</a></div>
   </section>
     </div>
